--- a/askquestion/templates/askquestion/ask_question.html
+++ b/askquestion/templates/askquestion/ask_question.html
@@ -6,12 +6,17 @@
     <div id="app" class="container-xl">
         <div class="row">
             <div class="col-12">
-                <div class="float-right mt-1">
-                    {% if user.is_authenticated %}
+                <div class="d-flex justify-content-between">
+                    <div>
+                        {% if user.is_authenticated %}
                         <a class="btn btn-outline-dark {% if user != owner%}invisible{% endif %}" href="{% url 'deck_list' %}">戻る</a>
-                    {% else %}
+                        {% endif %}
+                    </div>
+                    <div>
+                        {% if not user.is_authenticated %}
                         <a class="btn btn-outline-dark" href="{% provider_login_url 'google' %}">ログイン</a>
-                    {% endif %}
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
