--- a/users/templates/users/update.html
+++ b/users/templates/users/update.html
@@ -10,9 +10,13 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <div class="float-right">
-                    <a class="btn btn-outline-dark" href="{% url 'index' %}">戻る</a>
-                    <a class="btn btn-outline-dark save" href="#">保存</a>
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <a class="btn btn-outline-dark" href="{% url 'index' %}">戻る</a>
+                    </div>
+                    <div>
+                        <a class="btn btn-outline-dark save" href="#">保存</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -21,14 +25,6 @@
                 <form method="post" id="myform">
                     {% crispy form %}
                 </form>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="float-right mb-3">
-                    <a class="btn btn-outline-dark" href="{% url 'index' %}">戻る</a>
-                    <a class="btn btn-outline-dark save" href="#">保存</a>
-                </div>
             </div>
         </div>
     </div>
