スマホの出題画面拡大を無効

--- a/askquestion/templates/askquestion/ask_question.html
+++ b/askquestion/templates/askquestion/ask_question.html
@@ -1,5 +1,8 @@
 {% extends "_base.html" %}
 {% load socialaccount %}
+{% block additional_header %}
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+{% endblock %}
 {% block content %}
     {% load static %}
     {% load crispy_forms_tags %}
