--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,6 +16,8 @@
     <link href="{% static "app/css/app.css" %}" rel="stylesheet">
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    {% block additional_header %}
+    {% endblock %}
 </head>
 
 <body>
