--- a/askquestion/templates/askquestion/ask_question.html
+++ b/askquestion/templates/askquestion/ask_question.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}
 {% load socialaccount %}
-{% block additional_header %}
+{% block meta_viewport %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 {% endblock %}
 {% block content %}
