--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,7 +5,9 @@
 <head>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
+    {% block meta_viewport %}
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% endblock %}
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta http-equiv="Cache-Control" content="no-store">
     <title>問題文推理クイズメーカー</title>
@@ -15,9 +17,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css">
     <link href="{% static "app/css/app.css" %}" rel="stylesheet">
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    {% block additional_header %}
-    {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>    
 </head>
 
 <body>
