--- a/questioncard/templates/questioncard/questioncard_filter.html
+++ b/questioncard/templates/questioncard/questioncard_filter.html
@@ -29,7 +29,7 @@
                     @up="up"
                     @down="down"></my-template>
                 </ul>
-                <ul v-else>
+                <ul v-else class="list-group">
                     <li class="list-group-item">
                         対象のデータがありません
                     </li>
