--- a/templates/_base.html
+++ b/templates/_base.html
@@ -20,7 +20,9 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>    
 </head>
 
+{% block body_tag %}
 <body>
+{% endblock %}
 <!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
