問題遷移ボタンの位置を再度修正

--- a/app/static/app/css/app.css
+++ b/app/static/app/css/app.css
@@ -1,5 +1,9 @@
-.ask_question_move_question_button {
+.prev_question_button {
     margin: -15px;
+}
+
+.next_question_button {
+    margin: -33px;
 }
 
 .ask_question_jump_question_button {
