--- a/app/templates/allauth/socialaccount/login_cancelled.html
+++ b/app/templates/allauth/socialaccount/login_cancelled.html
@@ -1,15 +1,14 @@
-{% extends "socialaccount/base.html" %}
-
+{% extends "_base.html" %}
+{% load socialaccount %}
+{% load static %}
 {% load i18n %}
-
-{% block head_title %}{% trans "Login Cancelled" %}{% endblock %}
-
 {% block content %}
 
-<h1>{% trans "Login Cancelled" %}</h1>
-
-{% url 'account_login' as login_url %}
-
-<p>{% blocktrans %}You decided to cancel logging in to our site using one of your existing accounts. If this was a mistake, please proceed to <a href="{{login_url}}">sign in</a>.{% endblocktrans %}</p>
-
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <a class="btn btn-outline-dark" href="{% provider_login_url 'google' %}">ログインに戻る</a>
+        </div>
+    </div>
+</div>
 {% endblock %}
